{
  "version": 4,
  "terraform_version": "0.12",
  "serial": 89,
  "lineage": "f595f9f1-9d2c-48c1-7ac1-82a3befb6d88",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "cc_ifs",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "ela-attach-af7f0f8e",
                "device_index": 1
              }
            ],
            "availability_zone": "eu-central-1c",
            "description": "ELB net/kafka-controlcenter-lb/61f492f1abb766bd",
            "id": "eni-06883238dcc69d16f",
            "interface_type": "network_load_balancer",
            "mac_address": "0a:b4:34:bf:8c:aa",
            "owner_id": "375200909709",
            "private_dns_name": "ip-10-90-60-106.eu-central-1.compute.internal",
            "private_ip": "10.90.60.106",
            "private_ips": [
              "10.90.60.106"
            ],
            "requester_id": "619392343837",
            "subnet_id": "subnet-02c939986a0186bae",
            "tags": {
              "Confidentiality": "C3",
              "Environment": "PROD",
              "ManagedBy": "m.schueller@vodafone.com",
              "Project": "Solstice",
              "SecurityZone": "I-A",
              "TaggingVersion": "V2.4"
            },
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "ela-attach-057e4122",
                "device_index": 1
              }
            ],
            "availability_zone": "eu-central-1a",
            "description": "ELB net/kafka-controlcenter-lb/61f492f1abb766bd",
            "id": "eni-0ce2f0f852b481efd",
            "interface_type": "network_load_balancer",
            "mac_address": "02:16:5f:56:7d:80",
            "owner_id": "375200909709",
            "private_dns_name": "ip-10-90-0-195.eu-central-1.compute.internal",
            "private_ip": "10.90.0.195",
            "private_ips": [
              "10.90.0.195"
            ],
            "requester_id": "615402291668",
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "Confidentiality": "C3",
              "Environment": "PROD",
              "ManagedBy": "m.schueller@vodafone.com",
              "Project": "Solstice",
              "SecurityZone": "I-A",
              "TaggingVersion": "V2.4"
            },
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "ela-attach-490b5b74",
                "device_index": 1
              }
            ],
            "availability_zone": "eu-central-1b",
            "description": "ELB net/kafka-controlcenter-lb/61f492f1abb766bd",
            "id": "eni-0e8bb6402447fe9e4",
            "interface_type": "network_load_balancer",
            "mac_address": "06:36:c7:22:48:f4",
            "owner_id": "375200909709",
            "private_dns_name": "ip-10-90-30-229.eu-central-1.compute.internal",
            "private_ip": "10.90.30.229",
            "private_ips": [
              "10.90.30.229"
            ],
            "requester_id": "258463531763",
            "subnet_id": "subnet-07c851afbb0ad8e73",
            "tags": {
              "Confidentiality": "C3",
              "Environment": "PROD",
              "ManagedBy": "m.schueller@vodafone.com",
              "Project": "Solstice",
              "SecurityZone": "I-A",
              "TaggingVersion": "V2.4"
            },
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "ifs",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "ela-attach-98a3eebf",
                "device_index": 1
              }
            ],
            "availability_zone": "eu-central-1a",
            "description": "ELB net/kafka-broker-lb/30fcfe28f81ab7ac",
            "id": "eni-00151a8605f7a6927",
            "interface_type": "network_load_balancer",
            "mac_address": "02:9d:ea:4b:e7:62",
            "owner_id": "375200909709",
            "private_dns_name": "ip-10-90-0-101.eu-central-1.compute.internal",
            "private_ip": "10.90.0.101",
            "private_ips": [
              "10.90.0.101"
            ],
            "requester_id": "615402291668",
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "Confidentiality": "C3",
              "Environment": "TEST",
              "ManagedBy": "m.schueller@vodafone.com",
              "Project": "Solstice",
              "SecurityZone": "I-A",
              "TaggingVersion": "V2.4"
            },
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "ela-attach-ca9007eb",
                "device_index": 1
              }
            ],
            "availability_zone": "eu-central-1c",
            "description": "ELB net/kafka-broker-lb/30fcfe28f81ab7ac",
            "id": "eni-0027f0440530d4d21",
            "interface_type": "network_load_balancer",
            "mac_address": "0a:3b:b2:d7:61:fe",
            "owner_id": "375200909709",
            "private_dns_name": "ip-10-90-60-225.eu-central-1.compute.internal",
            "private_ip": "10.90.60.225",
            "private_ips": [
              "10.90.60.225"
            ],
            "requester_id": "619392343837",
            "subnet_id": "subnet-02c939986a0186bae",
            "tags": {
              "Confidentiality": "C3",
              "Environment": "TEST",
              "ManagedBy": "m.schueller@vodafone.com",
              "Project": "Solstice",
              "SecurityZone": "I-A",
              "TaggingVersion": "V2.4"
            },
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "ela-attach-57ccae6a",
                "device_index": 1
              }
            ],
            "availability_zone": "eu-central-1b",
            "description": "ELB net/kafka-broker-lb/30fcfe28f81ab7ac",
            "id": "eni-05914af306187e92f",
            "interface_type": "network_load_balancer",
            "mac_address": "06:5d:67:91:86:80",
            "owner_id": "375200909709",
            "private_dns_name": "ip-10-90-30-96.eu-central-1.compute.internal",
            "private_ip": "10.90.30.96",
            "private_ips": [
              "10.90.30.96"
            ],
            "requester_id": "258463531763",
            "subnet_id": "subnet-07c851afbb0ad8e73",
            "tags": {
              "Confidentiality": "C3",
              "Environment": "TEST",
              "ManagedBy": "m.schueller@vodafone.com",
              "Project": "Solstice",
              "SecurityZone": "I-A",
              "TaggingVersion": "V2.4"
            },
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375200909709:security-group/sg-0c995a3c65b1841ca",
            "description": "allow ssh inbound traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vfde-production-cim-eucentral1-sg-PROD-bastion-ec2-m2"
                ]
              }
            ],
            "id": "sg-0c995a3c65b1841ca",
            "name": "vfde-production-cim-eucentral1-sg-sbox-bastion-ec2-m2",
            "tags": {
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-PROD-CIM-DEV",
              "Confidentiality": "C2",
              "Environment": "PROD",
              "GeneratedBy": "Cloudfiction TF",
              "LMEntity": "VFDE",
              "ManagedBy": "TI-InfraAnalyse.Auftragseingang@Vodafone.com",
              "Name": "vfde-production-cim-eucentral1-sg-PROD-bastion-ec2-m2",
              "NetworkType": "M2",
              "PONumber": "PO1502454835",
              "Project": "CIM-Production",
              "SecurityZone": "I-A",
              "ServiceLevelUnit": "AWSDE-CIM",
              "TaggingVersion": "V2.2"
            },
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "broker_lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9001/8a5a512e9e6e0186-2020021410473714410000000b",
            "port": 9001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9001/8a5a512e9e6e0186",
            "target_id": "i-0ca0d39123917e617"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.kafka.aws_instance.kafka",
            "module.kafka.aws_security_group.kafka"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9002/e0a7fcc7d6fb8d67-20200214104737537300000011",
            "port": 9002,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9002/e0a7fcc7d6fb8d67",
            "target_id": "i-03f1a7d4431ff52d7"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.kafka.aws_instance.kafka",
            "module.kafka.aws_security_group.kafka"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9003/44176f55c81d8562-2020021410473711720000000a",
            "port": 9003,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9003/44176f55c81d8562",
            "target_id": "i-0836bb8a670328f95"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.kafka.aws_instance.kafka",
            "module.kafka.aws_security_group.kafka"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9004/93eebf65e481e561-20200214104737617100000012",
            "port": 9004,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9004/93eebf65e481e561",
            "target_id": "i-0eb2baa34e86ee5cb"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.kafka.aws_instance.kafka",
            "module.kafka.aws_security_group.kafka"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9005/b77e0f644b380df2-2020021410473720700000000c",
            "port": 9005,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-9005/b77e0f644b380df2",
            "target_id": "i-003faad9cf29da3f9"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.kafka.aws_instance.kafka",
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "broker_lb_sd",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba-20200219134122408400000001",
            "port": 9001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba",
            "target_id": "i-0ca0d39123917e617"
          },
          "dependencies": [
            "module.kafka.aws_instance.kafka"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba-20200219134122425500000002",
            "port": 9002,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba",
            "target_id": "i-03f1a7d4431ff52d7"
          },
          "dependencies": [
            "module.kafka.aws_instance.kafka"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba-20200219134122469600000004",
            "port": 9003,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba",
            "target_id": "i-0836bb8a670328f95"
          },
          "dependencies": [
            "module.kafka.aws_instance.kafka"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba-20200219134427167200000002",
            "port": 9004,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba",
            "target_id": "i-0eb2baa34e86ee5cb"
          },
          "dependencies": [
            "module.kafka.aws_instance.kafka"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba-20200219134427098900000001",
            "port": 9005,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-broker-lb-sd/1b97b7c2e0a293ba",
            "target_id": "i-003faad9cf29da3f9"
          },
          "dependencies": [
            "module.kafka.aws_instance.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.control_center",
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_center",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-09bec836c1702383d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-09bec836c1702383d",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef76f3217a7c6088",
            "private_dns": "ip-10-90-0-108.eu-central-1.compute.internal",
            "private_ip": "10.90.0.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-09eb11665b9b6647e",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-control-center-001",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-control-center",
              "SecurityZone": "A",
              "Service": "kafka-control-center",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_controlCenter"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-03a7250fccb2c71fc"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.control_center.aws_security_group.control_center"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0ca0d39123917e617",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/81f33f51-3faa-4d18-8bc2-6bb170e7c7c0",
                "volume_id": "vol-0cfbc9bc7e340a0f8",
                "volume_size": 4096,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0ca0d39123917e617",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e750652bd459bd19",
            "private_dns": "ip-10-90-0-130.eu-central-1.compute.internal",
            "private_ip": "10.90.0.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0b9d37bdbe23de934",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-broker-001",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-broker",
              "SecurityZone": "A",
              "Service": "kafka-broker",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_broker"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0a0677b50097cbe12"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.kafka.aws_security_group.kafka"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-03f1a7d4431ff52d7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/81f33f51-3faa-4d18-8bc2-6bb170e7c7c0",
                "volume_id": "vol-079b6439fd9f2f366",
                "volume_size": 4096,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-03f1a7d4431ff52d7",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-037ba8fe7ea6b02f3",
            "private_dns": "ip-10-90-30-180.eu-central-1.compute.internal",
            "private_ip": "10.90.30.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-093fd236cc8e013c8",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c851afbb0ad8e73",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-broker-002",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-broker",
              "SecurityZone": "A",
              "Service": "kafka-broker",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_broker"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0a0677b50097cbe12"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.kafka.aws_security_group.kafka"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0836bb8a670328f95",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/81f33f51-3faa-4d18-8bc2-6bb170e7c7c0",
                "volume_id": "vol-0d8e89b17b10c4d7e",
                "volume_size": 4096,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0836bb8a670328f95",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a65ffa79feb48646",
            "private_dns": "ip-10-90-60-36.eu-central-1.compute.internal",
            "private_ip": "10.90.60.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-043ab45c96f1dbf0a",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c939986a0186bae",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-broker-003",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-broker",
              "SecurityZone": "A",
              "Service": "kafka-broker",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_broker"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0a0677b50097cbe12"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.kafka.aws_security_group.kafka"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0eb2baa34e86ee5cb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/81f33f51-3faa-4d18-8bc2-6bb170e7c7c0",
                "volume_id": "vol-0ee0a8b6ec506da83",
                "volume_size": 4096,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0eb2baa34e86ee5cb",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd13e3db3c1f33f9",
            "private_dns": "ip-10-90-0-220.eu-central-1.compute.internal",
            "private_ip": "10.90.0.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-038d35b0e9a5f64b0",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-broker-004",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-broker",
              "SecurityZone": "A",
              "Service": "kafka-broker",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_broker"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0a0677b50097cbe12"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.kafka.aws_security_group.kafka"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-003faad9cf29da3f9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/81f33f51-3faa-4d18-8bc2-6bb170e7c7c0",
                "volume_id": "vol-06e611fcd668f7e56",
                "volume_size": 4096,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-003faad9cf29da3f9",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-05a335348d578144d",
            "private_dns": "ip-10-90-30-25.eu-central-1.compute.internal",
            "private_ip": "10.90.30.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-09ad1d21ee496abdd",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c851afbb0ad8e73",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-broker-005",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-broker",
              "SecurityZone": "A",
              "Service": "kafka-broker",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_broker"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0a0677b50097cbe12"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_connect",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_connect",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0378ead0e13364293",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0378ead0e13364293",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-03278485cf5049fba",
            "private_dns": "ip-10-90-0-146.eu-central-1.compute.internal",
            "private_ip": "10.90.0.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0f4f8d1a58ad3e6b3",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-connect-001",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-connect",
              "SecurityZone": "A",
              "Service": "kafka-connect",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_connect"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0cd108f2b83d73453"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.kafka_connect.aws_security_group.kafka_connect"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0c7510422e6ad2ec3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0c7510422e6ad2ec3",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a551266d0e0efb69",
            "private_dns": "ip-10-90-30-76.eu-central-1.compute.internal",
            "private_ip": "10.90.30.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-034fd521bc3e0f38b",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c851afbb0ad8e73",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-connect-002",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-connect",
              "SecurityZone": "A",
              "Service": "kafka-connect",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_connect"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0cd108f2b83d73453"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.kafka_connect.aws_security_group.kafka_connect"
          ]
        }
      ]
    },
    {
      "module": "module.schema_registry",
      "mode": "managed",
      "type": "aws_instance",
      "name": "schema_registry",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-060788dd32c8511d5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-060788dd32c8511d5",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0abbe5730c1f541de",
            "private_dns": "ip-10-90-0-74.eu-central-1.compute.internal",
            "private_ip": "10.90.0.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0317105687fc72ae0",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-schema-registry-001",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-schema-registry",
              "SecurityZone": "A",
              "Service": "kafka-schema-registry",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_schemaRegistry"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-00b5985ee49a015b1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0a7e906055e2f2baa",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0a7e906055e2f2baa",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0208ff53c5c2fa0f9",
            "private_dns": "ip-10-90-30-44.eu-central-1.compute.internal",
            "private_ip": "10.90.30.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-087c17a916b746330",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c851afbb0ad8e73",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-schema-registry-002",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-schema-registry",
              "SecurityZone": "A",
              "Service": "kafka-schema-registry",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_schemaRegistry"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-00b5985ee49a015b1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0b9c61593b2ff8bba",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0b9c61593b2ff8bba",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b8a631ab3d093076",
            "private_dns": "ip-10-90-60-231.eu-central-1.compute.internal",
            "private_ip": "10.90.60.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-01e6339665da3c437",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c939986a0186bae",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-schema-registry-003",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-schema-registry",
              "SecurityZone": "A",
              "Service": "kafka-schema-registry",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_schemaRegistry"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-00b5985ee49a015b1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-025abf7575477b2b6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-025abf7575477b2b6",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-09ef204da51f85418",
            "private_dns": "ip-10-90-0-31.eu-central-1.compute.internal",
            "private_ip": "10.90.0.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0d6a90b24df28a5d5",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-schema-registry-004",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-schema-registry",
              "SecurityZone": "A",
              "Service": "kafka-schema-registry",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_schemaRegistry"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-00b5985ee49a015b1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "aws_instance",
      "name": "zookeeper",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0d27ac19ec8b9f71c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 200,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/0f4abd81-c9ee-4c53-9660-73f00ceabd1a",
                "volume_id": "vol-053b53bfaeb255fd1",
                "volume_size": 64,
                "volume_type": "io1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0d27ac19ec8b9f71c",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ebdacab3fe3e17b4",
            "private_dns": "ip-10-90-0-194.eu-central-1.compute.internal",
            "private_ip": "10.90.0.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-026dc549abf747951",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-zookeeper-001",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-zookeeper",
              "SecurityZone": "A",
              "Service": "kafka-zookeeper",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_zookeeper"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0b5c0a53c8b0c0d61"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-056f8e22cacc4859d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 200,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/0f4abd81-c9ee-4c53-9660-73f00ceabd1a",
                "volume_id": "vol-0016aa233d718423d",
                "volume_size": 64,
                "volume_type": "io1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-056f8e22cacc4859d",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-033297d55282934ea",
            "private_dns": "ip-10-90-30-24.eu-central-1.compute.internal",
            "private_ip": "10.90.30.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0e5295ff899b9f6f9",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c851afbb0ad8e73",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-zookeeper-002",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-zookeeper",
              "SecurityZone": "A",
              "Service": "kafka-zookeeper",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_zookeeper"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0b5c0a53c8b0c0d61"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0e22efb498d722cd9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 200,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/0f4abd81-c9ee-4c53-9660-73f00ceabd1a",
                "volume_id": "vol-0219d22d3ca67ec51",
                "volume_size": 64,
                "volume_type": "io1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0e22efb498d722cd9",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c33f11bba8dd78d7",
            "private_dns": "ip-10-90-60-137.eu-central-1.compute.internal",
            "private_ip": "10.90.60.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0a917299e0a82cf93",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c939986a0186bae",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-zookeeper-003",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-zookeeper",
              "SecurityZone": "A",
              "Service": "kafka-zookeeper",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_zookeeper"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0b5c0a53c8b0c0d61"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-0830720007b4416d4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 200,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/0f4abd81-c9ee-4c53-9660-73f00ceabd1a",
                "volume_id": "vol-0b69a36ae45b34c10",
                "volume_size": 64,
                "volume_type": "io1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-0830720007b4416d4",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3442b20c81cb99c",
            "private_dns": "ip-10-90-0-185.eu-central-1.compute.internal",
            "private_ip": "10.90.0.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-05867e6431a849234",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975cea45078aed61",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-zookeeper-004",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-zookeeper",
              "SecurityZone": "A",
              "Service": "kafka-zookeeper",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_zookeeper"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0b5c0a53c8b0c0d61"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048fe90d7e4906069",
            "arn": "arn:aws:ec2:eu-central-1:375200909709:instance/i-05a3f6b453d16508e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 200,
                "kms_key_id": "arn:aws:kms:eu-central-1:375200909709:key/0f4abd81-c9ee-4c53-9660-73f00ceabd1a",
                "volume_id": "vol-0d3523b349cb5dc7a",
                "volume_size": 64,
                "volume_type": "io1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-iam-kafka-ssm-profile",
            "id": "i-05a3f6b453d16508e",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CIM_CDH_KAFKA_KEY",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5fef0e1d7f90737",
            "private_dns": "ip-10-90-30-66.eu-central-1.compute.internal",
            "private_ip": "10.90.30.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0a8e6283f9b696dc4",
                "volume_size": 1000,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c851afbb0ad8e73",
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "VFDE-CIM_CDH",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-ec2-PROD-kafka-zookeeper-005",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "Role": "ECR_Admin",
              "SSM_Ansible": "kafka-zookeeper",
              "SecurityZone": "A",
              "Service": "kafka-zookeeper",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4",
              "TiMonitoring": "kafka_zookeeper"
            },
            "tenancy": "default",
            "volume_tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "vpc_security_group_ids": [
              "sg-0b5c0a53c8b0c0d61"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        }
      ]
    },
    {
      "module": "module.control_center",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kafka_cc_lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-controlcenter-lb-tg/2ca3e9373008113b-20200214104732362600000005",
            "port": 9021,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-controlcenter-lb-tg/2ca3e9373008113b",
            "target_id": "10.90.0.108"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.control_center.aws_instance.control_center",
            "module.control_center.aws_security_group.control_center"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_connect",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kafka_connect",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-connect/aaa9bb06503516d7-20200214104939584500000015",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-connect/aaa9bb06503516d7",
            "target_id": "i-0378ead0e13364293"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.kafka_connect.aws_instance.kafka_connect",
            "module.kafka_connect.aws_security_group.kafka_connect"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-connect/aaa9bb06503516d7-20200214104939505400000014",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/kafka-connect/aaa9bb06503516d7",
            "target_id": "i-0c7510422e6ad2ec3"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.kafka_connect.aws_instance.kafka_connect",
            "module.kafka_connect.aws_security_group.kafka_connect"
          ]
        }
      ]
    },
    {
      "module": "module.schema_registry",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "schema_registry",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/schema-registry/acff22c4e23922cf-20200214104732845200000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/schema-registry/acff22c4e23922cf",
            "target_id": "i-060788dd32c8511d5"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.schema_registry.aws_instance.schema_registry",
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/schema-registry/acff22c4e23922cf-20200214104732630000000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/schema-registry/acff22c4e23922cf",
            "target_id": "i-0a7e906055e2f2baa"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.schema_registry.aws_instance.schema_registry",
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/schema-registry/acff22c4e23922cf-20200214104732714500000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/schema-registry/acff22c4e23922cf",
            "target_id": "i-0b9c61593b2ff8bba"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.schema_registry.aws_instance.schema_registry",
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/schema-registry/acff22c4e23922cf-20200214104732494300000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375200909709:targetgroup/schema-registry/acff22c4e23922cf",
            "target_id": "i-025abf7575477b2b6"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-iam-kafka-ssm-profile",
            "aws_iam_role.iam-ssm-kafka-host-role",
            "module.schema_registry.aws_instance.schema_registry",
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        }
      ]
    },
    {
      "module": "module.control_center",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_center",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375200909709:security-group/sg-03a7250fccb2c71fc",
            "description": "Allow control_center VFDE-CIM_CDH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a7250fccb2c71fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.90.60.106/32",
                  "10.90.0.195/32",
                  "10.90.30.229/32"
                ],
                "description": "Access from LB to port 9021 for control center access",
                "from_port": 9021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9021
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0726ee6007367e682",
                  "sg-0c995a3c65b1841ca"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9021
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9100
              },
              {
                "cidr_blocks": [],
                "description": "test for control center",
                "from_port": 9021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0677b50097cbe12"
                ],
                "self": false,
                "to_port": 9021
              }
            ],
            "name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-control-center-ec2-ia",
            "name_prefix": null,
            "owner_id": "375200909709",
            "revoke_rules_on_delete": false,
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-control-center-ec2-ia",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375200909709:security-group/sg-0a0677b50097cbe12",
            "description": "Allow kafka VFDE-CIM_CDH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0677b50097cbe12",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.90.0.101/32",
                  "10.90.60.225/32",
                  "10.90.30.96/32"
                ],
                "description": "Access from LB to port 9000 for kafka service discovery",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "10.90.0.101/32",
                  "10.90.60.225/32",
                  "10.90.30.96/32"
                ],
                "description": "Access from LB to port 900x for working ports between clients and brokers",
                "from_port": 9001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9006
              },
              {
                "cidr_blocks": [
                  "10.90.30.40/32",
                  "10.90.0.239/32",
                  "10.90.0.56/32",
                  "10.90.0.224/32",
                  "10.90.30.8/32",
                  "10.90.0.154/32",
                  "10.90.30.194/32",
                  "10.90.0.142/32",
                  "10.90.30.26/32",
                  "10.90.30.186/32"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9006
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0726ee6007367e682",
                  "sg-0c995a3c65b1841ca"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b5985ee49a015b1",
                  "sg-03a7250fccb2c71fc",
                  "sg-0b5c0a53c8b0c0d61",
                  "sg-0cd108f2b83d73453"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9006
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9093
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9100
              }
            ],
            "name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-broker-ec2-ia",
            "name_prefix": null,
            "owner_id": "375200909709",
            "revoke_rules_on_delete": false,
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-broker-ec2-ia",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "module": "module.kafka_connect",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_connect",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375200909709:security-group/sg-0cd108f2b83d73453",
            "description": "Allow kafka_connect VFDE-CIM_CDH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd108f2b83d73453",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.90.0.101/32",
                  "10.90.60.225/32",
                  "10.90.30.96/32"
                ],
                "description": "Access from LB to port 8082 for  kafka connect",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0726ee6007367e682",
                  "sg-0c995a3c65b1841ca"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0051060aaabc60158"
                ],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8083
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9100
              }
            ],
            "name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-connect-ec2-ia",
            "name_prefix": null,
            "owner_id": "375200909709",
            "revoke_rules_on_delete": false,
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-connect-ec2-ia",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_kafka",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375200909709:security-group/sg-0b40aeb0198032e2a",
            "description": "Allow kafka LoadBalancer VFDE-CIM_CDH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0b40aeb0198032e2a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0051060aaabc60158"
                ],
                "self": false,
                "to_port": 9006
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9006
              }
            ],
            "name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-lodbalancer",
            "name_prefix": null,
            "owner_id": "375200909709",
            "revoke_rules_on_delete": false,
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-lodbalancer",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "module": "module.schema_registry",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "schema_registry",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375200909709:security-group/sg-00b5985ee49a015b1",
            "description": "Allow schema_registry VFDE-CIM_CDH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b5985ee49a015b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.90.0.101/32",
                  "10.90.60.225/32",
                  "10.90.30.96/32"
                ],
                "description": "Access from LB to port 8081 for kafka schema_registry",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0726ee6007367e682",
                  "sg-0c995a3c65b1841ca"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0051060aaabc60158"
                ],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9100
              }
            ],
            "name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-schema-registry-ec2-ia",
            "name_prefix": null,
            "owner_id": "375200909709",
            "revoke_rules_on_delete": false,
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-schema-registry-ec2-ia",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zookeeper",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375200909709:security-group/sg-0b5c0a53c8b0c0d61",
            "description": "Allow Zookeeper traffic for VFDE-CIM_CDH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5c0a53c8b0c0d61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0677b50097cbe12"
                ],
                "self": true,
                "to_port": 2181
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0726ee6007367e682",
                  "sg-0c995a3c65b1841ca"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2888
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3888
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9090
              }
            ],
            "name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-zookeeper-ec2-ia",
            "name_prefix": null,
            "owner_id": "375200909709",
            "revoke_rules_on_delete": false,
            "tags": {
              "AWSregion": "eucentral1",
              "AutoTurnOFF": "No",
              "BU": "LOCAL-MARKET",
              "BusinessService": "VFDE-AWS-BSS-CIM-CDH-PROD",
              "CodeRepo": "https://deployvip.dc-ratingen.de:8080/bitbucket/scm/sol/k2view_infra.git",
              "Component": "CDH-PRD",
              "ComponentType": "Kafka",
              "Confidentiality": "C3",
              "Environment": "PROD",
              "GeneratedBy": "CIM CDH System Team - Terraform",
              "LMEntity": "VFDE",
              "LocalMarket": "VFDE",
              "ManagedBy": "m.schueller@vodafone.com",
              "Name": "VFDE-CIM_CDH-eu-central-1-sg-PROD-kafka-zookeeper-ec2-ia",
              "NetworkType": "IA",
              "POnumber": "PO1502033755",
              "Patch Group": "RHEL-PRD",
              "Project": "CIM-CDH",
              "SecurityZone": "A",
              "ServiceLevelUnit": "AWSDE-CIM_CDH:PROD",
              "StartTime": "0500",
              "StopTime": "1600",
              "TaggingVersion": "V2.4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4be40686a77bf6f"
          }
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_broker_intercommunication",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9000,
            "id": "sgrule-3371107057",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0677b50097cbe12",
            "self": true,
            "source_security_group_id": "sg-0a0677b50097cbe12",
            "to_port": 9006,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_broker_port_range",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9001,
            "id": "sgrule-1355971514",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b40aeb0198032e2a",
            "self": true,
            "source_security_group_id": "sg-0b40aeb0198032e2a",
            "to_port": 9006,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.lb_kafka"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_broker_port_range_NEW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.90.0.101/32",
              "10.90.60.225/32",
              "10.90.30.96/32"
            ],
            "description": "Access from LB to port 900x for working ports between clients and brokers",
            "from_port": 9001,
            "id": "sgrule-531944232",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0677b50097cbe12",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9006,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_broker_port_sd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9000,
            "id": "sgrule-1896160487",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b40aeb0198032e2a",
            "self": true,
            "source_security_group_id": "sg-0b40aeb0198032e2a",
            "to_port": 9000,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.lb_kafka"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_broker_port_sd_NEW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.90.0.101/32",
              "10.90.60.225/32",
              "10.90.30.96/32"
            ],
            "description": "Access from LB to port 9000 for kafka service discovery",
            "from_port": 9000,
            "id": "sgrule-1277471791",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0677b50097cbe12",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.control_center",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cc_port_sd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.90.60.106/32",
              "10.90.0.195/32",
              "10.90.30.229/32"
            ],
            "description": "Access from LB to port 9021 for control center access",
            "from_port": 9021,
            "id": "sgrule-1281827444",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03a7250fccb2c71fc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9021,
            "type": "ingress"
          },
          "dependencies": [
            "module.control_center.aws_security_group.control_center"
          ]
        }
      ]
    },
    {
      "module": "module.control_center",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9021,
            "id": "sgrule-1166270295",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03a7250fccb2c71fc",
            "self": true,
            "source_security_group_id": "sg-03a7250fccb2c71fc",
            "to_port": 9021,
            "type": "ingress"
          },
          "dependencies": [
            "module.control_center.aws_security_group.control_center"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_jmx_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9090,
            "id": "sgrule-4124835637",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0677b50097cbe12",
            "self": true,
            "source_security_group_id": "sg-0a0677b50097cbe12",
            "to_port": 9090,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_jmx_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9090,
            "id": "sgrule-3870631431",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c0a53c8b0c0d61",
            "self": true,
            "source_security_group_id": "sg-0b5c0a53c8b0c0d61",
            "to_port": 9090,
            "type": "ingress"
          },
          "dependencies": [
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_connect",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_kafka_connect",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8082,
            "id": "sgrule-2120416778",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd108f2b83d73453",
            "self": true,
            "source_security_group_id": "sg-0cd108f2b83d73453",
            "to_port": 8083,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka_connect.aws_security_group.kafka_connect"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_kafka_ssl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9093,
            "id": "sgrule-1920086889",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0677b50097cbe12",
            "self": true,
            "source_security_group_id": "sg-0a0677b50097cbe12",
            "to_port": 9093,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_connect",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_kafkaconnect_port_LB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.90.0.101/32",
              "10.90.60.225/32",
              "10.90.30.96/32"
            ],
            "description": "Access from LB to port 8082 for  kafka connect",
            "from_port": 8082,
            "id": "sgrule-1724018810",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd108f2b83d73453",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8082,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka_connect.aws_security_group.kafka_connect"
          ]
        }
      ]
    },
    {
      "module": "module.control_center",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_node_exporter_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9100,
            "id": "sgrule-2985080728",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03a7250fccb2c71fc",
            "self": true,
            "source_security_group_id": "sg-03a7250fccb2c71fc",
            "to_port": 9100,
            "type": "ingress"
          },
          "dependencies": [
            "module.control_center.aws_security_group.control_center"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_connect",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_node_exporter_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9100,
            "id": "sgrule-1792738284",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cd108f2b83d73453",
            "self": true,
            "source_security_group_id": "sg-0cd108f2b83d73453",
            "to_port": 9100,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka_connect.aws_security_group.kafka_connect"
          ]
        }
      ]
    },
    {
      "module": "module.schema_registry",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_node_exporter_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9100,
            "id": "sgrule-2514438774",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00b5985ee49a015b1",
            "self": true,
            "source_security_group_id": "sg-00b5985ee49a015b1",
            "to_port": 9100,
            "type": "ingress"
          },
          "dependencies": [
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_node_exporter_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9100,
            "id": "sgrule-3417636372",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0677b50097cbe12",
            "self": true,
            "source_security_group_id": "sg-0a0677b50097cbe12",
            "to_port": 9100,
            "type": "ingress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_node_exporter_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 9100,
            "id": "sgrule-3548884157",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c0a53c8b0c0d61",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9100,
            "type": "ingress"
          },
          "dependencies": [
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        }
      ]
    },
    {
      "module": "module.control_center",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ping_from_jump_host_ip_self_bastion_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2700365736",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03a7250fccb2c71fc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.control_center.aws_security_group.control_center"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_connect",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ping_from_jump_host_ip_self_bastion_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1969006944",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cd108f2b83d73453",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.kafka_connect.aws_security_group.kafka_connect"
          ]
        }
      ]
    },
    {
      "module": "module.schema_registry",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ping_from_jump_host_ip_self_bastion_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-880847893",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00b5985ee49a015b1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ping_from_jump_host_ip_self_bastion_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1040466506",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a0677b50097cbe12",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.kafka.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ping_from_jump_host_ip_self_bastion_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-101931041",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b5c0a53c8b0c0d61",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        }
      ]
    },
    {
      "module": "module.schema_registry",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_sg_port_LB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.90.0.101/32",
              "10.90.60.225/32",
              "10.90.30.96/32"
            ],
            "description": "Access from LB to port 8081 for kafka schema_registry",
            "from_port": 8081,
            "id": "sgrule-2126186544",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00b5985ee49a015b1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8081,
            "type": "ingress"
          },
          "dependencies": [
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_zookeeper_internal_communication",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2888,
            "id": "sgrule-1187060190",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c0a53c8b0c0d61",
            "self": true,
            "source_security_group_id": "sg-0b5c0a53c8b0c0d61",
            "to_port": 2888,
            "type": "ingress"
          },
          "dependencies": [
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_zookeeper_leader_election",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3888,
            "id": "sgrule-576727573",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c0a53c8b0c0d61",
            "self": true,
            "source_security_group_id": "sg-0b5c0a53c8b0c0d61",
            "to_port": 3888,
            "type": "ingress"
          },
          "dependencies": [
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_zookeeper_quorum",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2181,
            "id": "sgrule-1317551196",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b5c0a53c8b0c0d61",
            "self": true,
            "source_security_group_id": "sg-0b5c0a53c8b0c0d61",
            "to_port": 2181,
            "type": "ingress"
          },
          "dependencies": [
            "module.zookeeper.aws_security_group.zookeeper"
          ]
        }
      ]
    },
    {
      "module": "module.schema_registry",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_schema_registry_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8081,
            "id": "sgrule-2478813017",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00b5985ee49a015b1",
            "self": true,
            "source_security_group_id": "sg-00b5985ee49a015b1",
            "to_port": 8081,
            "type": "ingress"
          },
          "dependencies": [
            "module.schema_registry.aws_security_group.schema_registry"
          ]
        }
      ]
    }
  ]
}